@@ -37,7 +37,8 @@ TESTS :=																\
   test/test-extrinsics-moved-since-calibration.py											\
   test/test-broadcasting.py														\
   test/test-compute-chessboard-corners-parsing.py											\
-  test/test-rectification-maps.py
+  test/test-rectification-maps.py													\
+  test/test-save-load-image.py
 
 # triangulation-uncertainty tests. Lots and lots of tests to exhaustively try
 # out different scenarios
