@@ -40,4 +40,7 @@ most arguments are optional
 
 measurement_index_....() all return <0 if those measurements aren't present
 
+save_image() can write 16bpp grayscale images properly
+This requires a more recent libfreeimage than is available on some OSs
+
 * Migration notes 2.2 -> 2.3
